<resources>
    <string name="app_name">Get Reminder And Stay Healthy</string>


    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="alarm">Alarm</string>
    <string name="track">Track</string>
    <string name="more">More</string>

    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_alarm">Hello blank fragment of alarm</string>
    <string name="hello_blank_fragment_track">Hello blank fragment of trace record</string>
    <string name="hello_blank_fragment_more">Hello more</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="findpillbox">Find Pill Box</string>
    <string name="graph">Analysis of graphs</string>
    <string name="turn_off">Turn Off</string>
    <string name="buzz_pill_box">Buzz Pill Box</string>
    <string name="splash">Get Reminder And Stay Healthy</string>

    <string name="action_settings">Settings</string>
    <string name="years">years</string>
    <string name="contacts">CONTACTS</string>
    <string name="reminders">REMINDERS</string>
    <string name="notes">NOTES</string>
    <string name="insert_time">Insert time</string>
    <string name="insert_date">Insert date</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_description">Insert description</string>
    <string name="enabled_alarm">Enable alarm</string>
    <string name="birthday">Birthday</string>
    <string name="reminder">Reminder</string>
    <string name="has_birthday">has birthday</string>
    <string name="date_time_before">Can\'t setup alarm in past.</string>
    <string name="default_time_notification">Birthday notification time</string>
    <string name="ringtone_picker">Select tone</string>
    <string name="save">Save settings</string>
    <string name="birthday_alerts">Enable Birthday alerts</string>
    <string name="vibrate_on_alerts">Enable vibration</string>
    <string name="light_on_alerts">Enable notification light</string>
    <string name="invalid_ringtone">Invalid ringtone</string>
    <string name="notification_sound">Notification sound</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
</resources>
