<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Switch
        android:id="@+id/alarm_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/enabled_alarm"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_date"
        android:hint="Enter Date"
        android:layout_marginTop="82dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELECT DATE"
        android:id="@+id/btn_date"
        android:layout_alignBottom="@+id/in_date"
        android:layout_toRightOf="@+id/in_date"
        android:layout_toEndOf="@+id/in_date" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_time"
        android:layout_below="@+id/in_date"
        android:hint="Enter Time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELECT TIME"
        android:id="@+id/btn_time"
        android:layout_below="@+id/btn_date"
        android:layout_alignLeft="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date" />


    <EditText
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_name"
        android:maxLength="50"
        android:layout_below="@+id/in_time"/>

    <EditText
        android:id="@+id/new_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_description"
        android:layout_below="@+id/new_name"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_description"
        android:background="#1D1515"
        android:text="Save"
        android:textColor="#E7F0F0"></Button>
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1D1515"
        android:layout_toRightOf="@+id/btn_save"
        android:layout_alignBottom="@+id/btn_save"

        android:layout_toEndOf="@+id/btn_save"
        android:layout_marginLeft="50dp"
        android:text="Delete"
        android:textColor="#E7F0F0"></Button>
    <Button
        android:id="@+id/btn_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1D1515"
        android:layout_below="@+id/btn_save"
        android:layout_marginLeft="50dp"
        android:text="Show All Reminders"
        android:textColor="#E7F0F0"></Button>

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_delete"
        android:textSize="16dp"
        android:gravity="center_horizontal"/>


</RelativeLayout>
